# fast-api-lesson

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
api/: db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: task.py
api/schemas/: task.py
api/tests/: test_main.py
